k8s/03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: go-redis-prod
spec:
  replicas: 2 # High availability
  selector:
    matchLabels:
      app: go-api-deployment
  template:
    metadata:
      labels:
        app: go-api-deployment
    spec:
      containers:
      - name: go-api
        image: localhost:5000/my-go-app:88afd30 
        imagePullPolicy: IfNotPresent
