k8s/09-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service # <--- This MUST match the Ingress "backend.service.name"
  namespace: go-redis-prod
  labels:
    app: go-api-prometheus # This allows Prometheus to find this service
spec:
  selector:
    app: go-api-deployment # This tells the Service which pods to "manage"
  ports:
    - name: metrics
      protocol: TCP
      port: 80         # Port the service listens on
      targetPort: 8080 # Port your Go app is actually running on inside the container
